--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
       <h1>
         <span lang="en">Shri Vaishnav Vidyapeeth Vishwavidyalaya</span>
         <br>
-        <span lang="hi">विद्यापीठ विष्णुविश्वविद्यालय</span>
+        <span lang="hi">श्री वैष्णव विद्यापीठ विश्वविद्यालय</span>
       </h1>
     </div>
   </header>
